fix(security): resolve OOM, concurrency, false positives, and crypto issues
Addresses multiple security, concurrency, and reliability vulnerabilities
identified in SecurityServiceImpl (R-03 through R-08).

- R-03: Fix OOM risk from unbounded BufferedReader in detectRansomware()
  and detectTrojan(). Introduce a generic bounded pattern scanner
  (scanWithPatterns) capped at MAX_PATTERN_SCAN_BYTES. Extract
  RANSOMWARE_EXTENSIONS/PATTERNS as static fields and reorder scanFile()
  to classify ransomware correctly before generic MALWARE.
- R-04: Fix ConcurrentModificationException by replacing the
  non-thread-safe HashSet with ConcurrentHashMap.newKeySet() for
  KNOWN_MALWARE_SIGNATURES, allowing safe concurrent reads/writes.
- R-05: Fix extreme false positives in detectRootkit(). Remove overly
  broad checks for /proc, /sys, dotfiles (isHidden), and zero-byte
  files. Narrow location check to driver/boot paths and require
  corroborating binary patterns.
- R-06: Fix MD5 collision vulnerability by switching calculateFileHash()
  to SHA-256 and updating signature constants to 64-char hashes.
- R-07: Remove unnecessary @SuppressWarnings("null") from
  saveScanResult() and loadInfectedScanResult() as existing null guards
  and Optional.orElseThrow() make them redundant.
- R-08: Fix misleading updateVirusDefinitions() by removing the invalid
  placeholder hash that could never match a real digest, replacing it
  with an HTTP 501 NOT_IMPLEMENTED response.